# autogoal-contrib

./: .gitignore
.github/workflows/: release.yml
autogoal_contrib/: pyproject.toml
autogoal_contrib/autogoal_contrib/: __init__.py  wrappers.py
autogoal_contrib/autogoal_contrib/tests/: test_nltk_with_sklearn.py
autogoal_gensim/: pyproject.toml
autogoal_gensim/autogoal_gensim/: __init__.py  _base.py
autogoal_keras/: pyproject.toml
autogoal_nltk/: pyproject.toml
autogoal_nltk/autogoal_nltk/: _generated.py  _manual.py
autogoal_nltk/autogoal_nltk/tests/: test_nltk.py
autogoal_regex/: pyproject.toml
autogoal_regex/autogoal_regex/: __init__.py
autogoal_sklearn/: pyproject.toml
autogoal_sklearn/autogoal_sklearn/: _builder.py  _generated.py  _manual.py
autogoal_sklearn/autogoal_sklearn/tests/: test_automl_sklearn_unsupervised.py  test_crf_suite.py
autogoal_spacy/: pyproject.toml
autogoal_spacy/autogoal_spacy/: _base.py
autogoal_streamlit/: pyproject.toml
autogoal_telegram/: pyproject.toml
autogoal_telegram/autogoal_telegram/: __init__.py
autogoal_transformers/: pyproject.toml
autogoal_transformers/autogoal_transformers/: __init__.py  _bert.py  _builder.py  _generated.py  _manual.py  _tc_generated.py  _utils.py  download_tec.py  download_toc.py  test.py  test2.py
autogoal_wikipedia/: pyproject.toml
autogoal_wikipedia/autogoal_wikipedia/: _base.py
